# TIMP_Labs

./: .DESCRIPTION.swp  .REPORT.md.swo  .REPORT.md.swp  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md  REPORT.md  Vagrantfile
.github/workflows/: actions.yml  deb.yml  dmg.yml  lab05_actions.yml  msi.yml  rpm.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  example1  example2  install_manifest.txt
banking/: CMakeLists.txt
formatter_ex_lib/: .formatter_ex.cpp.swp  CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
sources/: hello_world.cpp
